--- a/Subgroups_test004_1.ipynb
+++ b/Subgroups_test004_1.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "v2JbgO0r9PYx",
         "colab": {
@@ -536,7 +536,7 @@
         "id": "i2K4yr7DQpA5",
         "outputId": "86027d5d-2e59-4b14-9b02-b91644481f2b"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -930,7 +930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "m8C078Ox58ew"
       },
@@ -1018,42 +1018,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cGt4128swWC-",
-        "outputId": "7934e8df-dd1b-43e9-9c82-bf6f7485c647"
+        "outputId": "dee8fb78-64a7-480a-ad00-6d1329c5515a"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Subgroups selected by sdmap: 12\n",
-            "Description: [production_countries = 'Japan'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.0030886 ; tp = 142 ; fp = 38 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'ja', production_countries = 'Japan'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.003050330000000001 ; tp = 141 ; fp = 38 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'ja'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.00330092 ; tp = 154 ; fp = 42 ; TP = 6173 ; FP = 3827\n",
-            "Description: [production_countries = 'United Kingdom, United States of America'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.004213110000000001 ; tp = 223 ; fp = 70 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'en', production_countries = 'United Kingdom, United States of America'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.004213110000000001 ; tp = 223 ; fp = 70 ; TP = 6173 ; FP = 3827\n",
-            "Description: [genres = 'Drama, Romance'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.0053340800000000015 ; tp = 241 ; fp = 63 ; TP = 6173 ; FP = 3827\n",
-            "Description: [genres = 'Drama, Romance', original_language = 'en'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.0035120600000000004 ; tp = 145 ; fp = 33 ; TP = 6173 ; FP = 3827\n",
-            "Description: [production_countries = 'United Kingdom'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.0035104900000000015 ; tp = 274 ; fp = 113 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'en', production_countries = 'United Kingdom'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.0035956800000000013 ; tp = 273 ; fp = 111 ; TP = 6173 ; FP = 3827\n",
-            "Description: [production_countries = 'United States of America'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.010847629999999999 ; tp = 2682 ; fp = 1487 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'en', production_countries = 'United States of America'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.010871090000000028 ; tp = 2681 ; fp = 1486 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'en'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.003081610000000004 ; tp = 4255 ; fp = 2588 ; TP = 6173 ; FP = 3827\n",
-            "Subgroups selected by sdmapstar: 14\n",
-            "Description: [original_language = 'en'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.003081610000000004 ; tp = 4255 ; fp = 2588 ; TP = 6173 ; FP = 3827\n",
-            "Description: [production_countries = 'United States of America'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.010847629999999999 ; tp = 2682 ; fp = 1487 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'en', production_countries = 'United States of America'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.010871090000000028 ; tp = 2681 ; fp = 1486 ; TP = 6173 ; FP = 3827\n",
-            "Description: [genres = 'Drama', original_language = 'en'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.003590830000000002 ; tp = 239 ; fp = 90 ; TP = 6173 ; FP = 3827\n",
-            "Description: [production_countries = 'United Kingdom'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.0035104900000000015 ; tp = 274 ; fp = 113 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'en', production_countries = 'United Kingdom'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.00415125 ; tp = 273 ; fp = 102 ; TP = 6173 ; FP = 3827\n",
-            "Description: [genres = 'Drama, Romance'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.0053340800000000015 ; tp = 241 ; fp = 63 ; TP = 6173 ; FP = 3827\n",
-            "Description: [genres = 'Drama, Romance', original_language = 'en'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.003758980000000001 ; tp = 145 ; fp = 29 ; TP = 6173 ; FP = 3827\n",
-            "Description: [production_countries = 'United Kingdom, United States of America'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.004213110000000001 ; tp = 223 ; fp = 70 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'en', production_countries = 'United Kingdom, United States of America'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.00458349 ; tp = 223 ; fp = 64 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'ja'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.00330092 ; tp = 154 ; fp = 42 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'en', spoken_languages = 'English, Español'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.0031774600000000013 ; tp = 154 ; fp = 44 ; TP = 6173 ; FP = 3827\n",
-            "Description: [production_countries = 'Japan'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.0030886 ; tp = 142 ; fp = 38 ; TP = 6173 ; FP = 3827\n",
-            "Description: [original_language = 'ja', production_countries = 'Japan'], Target: vote_average = 'High' ; Quality Measure WRAcc = 0.0033589799999999997 ; tp = 141 ; fp = 33 ; TP = 6173 ; FP = 3827\n"
+            "Subgroups selected by sdmap: 0\n",
+            "Subgroups selected by sdmapstar: 22\n",
+            "Description: [CitizenDesc = 'US Citizen', EmpSatisfaction = '5'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.03445994148116748 ; tp = 15 ; fp = 21 ; TP = 37 ; FP = 274\n",
+            "Description: [EmpSatisfaction = '5', State = 'MA'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.03239213821197052 ; tp = 14 ; fp = 19 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', EmpSatisfaction = '5', State = 'MA'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.03239213821197052 ; tp = 14 ; fp = 19 ; TP = 37 ; FP = 274\n",
+            "Description: [EmpSatisfaction = '5', EmploymentStatus = 'Active'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.025041097589975293 ; tp = 11 ; fp = 16 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', EmpSatisfaction = '5', EmploymentStatus = 'Active'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.025041097589975293 ; tp = 11 ; fp = 16 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', Sex = 'M '], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.029414501504326875 ; tp = 17 ; fp = 49 ; TP = 37 ; FP = 274\n",
+            "Description: [Sex = 'M ', State = 'MA'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.025661438570734375 ; tp = 15 ; fp = 44 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', Sex = 'M ', State = 'MA'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.025661438570734375 ; tp = 15 ; fp = 44 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', RaceDesc = 'Black or African American'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.03322959853599528 ; tp = 12 ; fp = 2 ; TP = 37 ; FP = 274\n",
+            "Description: [EmploymentStatus = 'Active', RaceDesc = 'Black or African American'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.028328904787998467 ; tp = 10 ; fp = 0 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', EmploymentStatus = 'Active', RaceDesc = 'Black or African American'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.028328904787998467 ; tp = 10 ; fp = 0 ; TP = 37 ; FP = 274\n",
+            "Description: [RaceDesc = 'Black or African American', State = 'MA'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.027563817578395593 ; tp = 10 ; fp = 2 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', RaceDesc = 'Black or African American', State = 'MA'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.027563817578395593 ; tp = 10 ; fp = 2 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', RecruitmentSource = 'Indeed'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.03246451132639241 ; tp = 12 ; fp = 4 ; TP = 37 ; FP = 274\n",
+            "Description: [EmploymentStatus = 'Active', RecruitmentSource = 'Indeed'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.030014164452393997 ; tp = 11 ; fp = 3 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', EmploymentStatus = 'Active', RecruitmentSource = 'Indeed'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.030014164452393997 ; tp = 11 ; fp = 3 ; TP = 37 ; FP = 274\n",
+            "Description: [RecruitmentSource = 'Indeed', State = 'MA'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.027563817578395593 ; tp = 10 ; fp = 2 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', RecruitmentSource = 'Indeed', State = 'MA'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.027563817578395593 ; tp = 10 ; fp = 2 ; TP = 37 ; FP = 274\n",
+            "Description: [EmploymentStatus = 'Active', RecruitmentSource = 'Indeed', State = 'MA'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.025113470704397182 ; tp = 9 ; fp = 1 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', EmploymentStatus = 'Active', RecruitmentSource = 'Indeed', State = 'MA'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.025113470704397182 ; tp = 9 ; fp = 1 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', EmpSatisfaction = '4'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.026571272009181045 ; tp = 11 ; fp = 12 ; TP = 37 ; FP = 274\n",
+            "Description: [CitizenDesc = 'US Citizen', EmpSatisfaction = '3'], Target: PerformanceScore = 'Exceeds' ; Quality Measure WRAcc = 0.026953815613982485 ; tp = 11 ; fp = 11 ; TP = 37 ; FP = 274\n"
           ]
         }
       ]
