--- a/SDUEBA_001.ipynb
+++ b/SDUEBA_001.ipynb
@@ -116,6 +116,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "outputId": "de38b4eb-86b8-446a-9919-1fbe6262c84e"
       },
       "outputs": [
@@ -140,9 +141,7 @@
         "    sentence = []\n",
         "    for word in features_df.iloc[i]:\n",
         "        sentence.append(word)\n",
-        "    sentences.append(sentence)\n",
-        "\n",
-        "print(sentences)"
+        "    sentences.append(sentence)"
       ]
     },
     {
@@ -539,7 +538,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvm2PWa+0ZYeH1jb/fprbM",
+      "authorship_tag": "ABX9TyO/pVkja2KWN4JdA06nrxRR",
       "include_colab_link": true
     },
     "kernelspec": {
